--- a/index.html
+++ b/index.html
@@ -1,203 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Solutioneers Smart Agriculture Dashboard</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta charset="utf-8" />
+  <title>Solutioneers • Smart Agriculture Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap" rel="stylesheet">
   <style>
-  html,body{height:100%;}
-  body {
-    font-family: Montserrat,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;
-    color: #213;
-    background: linear-gradient(120deg,#f1f4f8 0,#c2ebd6 40%,#e3ecf9 100%);
-    min-height:100vh;
-    line-height:1.35;
-  }
-  .dashboard-bg {
-    margin:36px auto 0 auto;
-    max-width:1250px;
-    padding:30px 24px;
-    border-radius:30px;
-    background:linear-gradient(135deg,#e4ffe9 0,#b3efe3 80%,#dbf2ff 100%);
-    background-blend-mode:soft-light;
-    box-shadow:0 6px 60px rgba(50,85,70,0.14),0 1.5px 12px rgba(90,155,120,0.09);
-    backdrop-filter:blur(8px);
-  }
-  .sidebar {
-    position:fixed;left:0;top:0;bottom:0;width:350px;max-width:98vw;background:#1b5e33;z-index:2000;
-    padding:22px 12px 24px 18px;overflow-y:auto;display:none;
-    box-shadow:0 10px 40px rgba(27,94,51,0.18);
-  }
-  .sidebar.open{display:block;}
-  .sidebar h3 {color: #fff;}
-  .sidebar nav a {color:#fff;}
-  .navbar{position:sticky;top:0;z-index:1200;display:flex;justify-content:space-between;align-items:center;padding:14px 26px;background:rgba(255,255,255,0.92);box-shadow:0 6px 18px rgba(20,30,20,0.06);}
-  .nav-left{display:flex;align-items:center;gap:14px;}
-  .menu-btn{display:inline-flex;align-items:center;justify-content:center;width:44px;height:44px;border-radius:10px;border:none;background:linear-gradient(180deg,#fff,#f1f5f1);font-size:20px;cursor:pointer;}
-  .brand{display:flex;align-items:center;gap:10px;font-weight:700;color:#196f3d;}
-  .brand .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,#dff6e8,#b9e8c1);display:flex;align-items:center;justify-content:center;font-weight:800;color:#1b5e33;font-size:20px;}
-  .brand .title{font-size:18px;}
-  .nav-time{font-size:13px;color:#3a3a3a;margin-left:6px;}
-  .nav-right{display:flex;align-items:center;gap:8px;}
-  .lang-select{padding:8px 12px;border-radius:8px;border:1px solid #e6f0ea;background:#e8f6ee;}
-  .btn{padding:9px 14px;border-radius:9px;border:none;cursor:pointer;font-weight:600;}
-  .btn.login{background:transparent;border:1px solid #ddd;color:#175a30;}
-  .btn.cta{background:#1e7b3f;color:#fff;}
-  .hero{margin:28px 0 0 0;border-radius:18px;background:linear-gradient(135deg,#e8f7ee,#f1f9f2);box-shadow:0 20px 40px rgba(25,111,61,0.06);display:flex;align-items:center;justify-content:space-between;gap:30px;padding:42px 42px 28px 42px;min-height:160px;}
-  .hero .left{max-width:72%;}
-  .hero h1{font-size:34px;line-height:1.02;color:#114b27;margin-bottom:8px;font-weight:800;}
-  .hero p{color:#2c5b3a;opacity:0.97;font-size:17px;}
-  .hero .cta-row{margin-top:16px;display:flex;gap:12px;}
-  .hero .cta{padding:10px 16px;border-radius:12px;border:none;cursor:pointer;font-weight:700;}
-  .hero .cta.primary{background:#1e7b3f;color:#fff;box-shadow:0 10px 26px rgba(30,123,63,0.12);}
-  .hero .cta.ghost{background:transparent;border:1px solid #d6eee0;color:#1e7b3f;}
-  .hero .right{width:320px;height:120px;border-radius:12px;background-image:url('https://images.pexels.com/photos/158827/field-cereal-farm-garden-158827.jpeg?auto=compress&w=700');background-size:cover;background-position:center;box-shadow:inset 0 0 0 120px rgba(255,255,255,0.18);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;text-shadow:0 4px 20px rgba(0,0,0,0.3);}
-  .section{display:grid;grid-template-columns:1fr 420px;gap:32px;max-width:1300px;margin:32px auto 0 auto;}
-  .card-large{border-radius:18px;background:#fff;padding:32px 32px 20px 32px;box-shadow:0 10px 30px rgba(16,64,28,0.06);font-size:17px;}
-  .about h3{color:#1b6b36;margin-bottom:10px;font-size:22px;}
-  .about p{color:#2c4d3a;opacity:.93;font-size:17px;}
-  .news-box{border-radius:18px;background:linear-gradient(180deg,#fff,#fbfffd);padding:22px;box-shadow:0 10px 28px rgba(16,64,28,0.08);}
-  .news-box h3{color:#1b6b36;margin-bottom:12px;font-size:18px;}
-  .news-scroll{height:175px;overflow:hidden;position:relative;}
-  .news-track{display:flex;flex-direction:column;gap:9px;animation:newsScroll 12s linear infinite;}
-  .news-item{font-size:15px;color:#264c36;padding:8px 2px;margin-left:5px;background:linear-gradient(90deg,rgba(40,120,60,.03),transparent);border-radius:7px;}
-  @keyframes newsScroll {
-   0%   { transform: translateY(0);}
-   100% { transform: translateY(-50%);}
-  }
-  .grid{margin:0;display:grid;grid-template-columns:repeat(auto-fit,minmax(330px,1fr));gap:18px;}
-  .big-card{position:relative;overflow:hidden;border-radius:18px;height:180px;color:#fff;display:flex;flex-direction:column;justify-content:flex-end;padding:22px;background-size:cover;background-position:center;text-decoration:none;box-shadow:0 6px 32px rgba(10,50,20,0.07);transition:transform .28s, box-shadow .28s;}
-  .big-card:after{content:"";position:absolute;inset:0;background:linear-gradient(180deg,transparent 35%,rgba(5,35,15,0.48));mix-blend-mode:multiply;}
-  .big-card .title{position:relative;font-weight:800;font-size:20px;z-index:2;}
-  .big-card .desc{position:relative;margin-top:8px;font-weight:600;opacity:.95;z-index:2;font-size:13px;}
-  .big-card:hover{transform:translateY(-10px) scale(1.02);box-shadow:0 30px 60px rgba(12,48,22,0.12);}
-  .overlay-green{background:linear-gradient(135deg,rgba(26,139,87,0.60),rgba(18,95,50,0.55));}
-  .overlay-yellow{background:linear-gradient(135deg,rgba(255,195,79,0.60),rgba(255,143,0,0.45));}
-  .overlay-blue{background:linear-gradient(135deg,rgba(95,150,255,0.45),rgba(65,120,255,0.38));}
-  .overlay-purple{background:linear-gradient(135deg,rgba(200,140,255,0.45),rgba(145,86,255,0.36));}
-  .card-detail {
-    display:none;
-    background:#e6fff5;
-    color:#153;
-    margin-top:-5px;margin-bottom:30px;
-    border-radius:14px;
-    padding:24px 24px 24px 24px;
-    box-shadow:0 8px 28px rgba(17,128,60,0.07);
-    font-size:16px;
-    max-width:95vw;
-    overflow-x:auto;
-    line-height:1.48;
-    border-left:5px solid #1e7b3f;
-  }
-  .card-detail h4 {margin-top:0;color:#206539;font-size:20px;}
-  /* Responsive */
-  @media (max-width:1200px){.section{grid-template-columns:1fr;max-width:96vw;}}
-  @media (max-width:960px){.sidebar{width:98vw;max-width:98vw;}.dashboard-bg{padding:10px;}.chat-window{width:99vw;}}
+    /* ---------- Reset ---------- */
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{font-family:'Montserrat',sans-serif;background:#f5f7fa;color:#333}
+
+    /* ---------- Navbar ---------- */
+    header{background:#2c3e50;color:#fff;display:flex;justify-content:space-between;align-items:center;padding:15px 25px;position:sticky;top:0;z-index:1000}
+    header .brand{font-size:22px;font-weight:700}
+    header .time{font-size:14px}
+    header .buttons button{background:#1abc9c;color:#fff;border:none;padding:8px 14px;margin-left:8px;border-radius:5px;cursor:pointer;transition:0.3s}
+    header .buttons button:hover{background:#16a085}
+
+    /* ---------- Sidebar ---------- */
+    .sidebar{position:fixed;top:0;left:-250px;width:250px;height:100%;background:#34495e;color:#fff;padding:20px;transition:0.3s;z-index:999}
+    .sidebar.open{left:0}
+    .sidebar h3{margin-bottom:20px}
+    .sidebar a{display:block;color:#ecf0f1;padding:10px 0;text-decoration:none;transition:0.3s}
+    .sidebar a:hover{color:#1abc9c}
+    .sidebar-toggle{position:absolute;top:20px;right:-50px;background:#1abc9c;color:#fff;border:none;padding:10px;border-radius:5px;cursor:pointer}
+
+    /* ---------- Hero ---------- */
+    .hero{padding:60px 20px;text-align:center;background:#ecf0f1}
+    .hero h1{font-size:32px;margin-bottom:15px}
+    .hero p{font-size:16px;margin-bottom:20px}
+    .hero button{background:#1abc9c;color:#fff;border:none;padding:10px 20px;margin:5px;border-radius:5px;cursor:pointer;transition:0.3s}
+    .hero button:hover{background:#16a085}
+
+    /* ---------- About + News ---------- */
+    .about-news{display:grid;grid-template-columns:1fr 300px;gap:20px;padding:40px 20px}
+    .about-news .about h2{margin-bottom:10px}
+    .news-ticker{background:#2c3e50;color:#fff;padding:15px;border-radius:8px;max-height:200px;overflow-y:auto}
+
+    /* ---------- Dashboard ---------- */
+    .dashboard{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));gap:20px;padding:40px 20px}
+    .card{position:relative;background:#fff;border-radius:15px;overflow:hidden;box-shadow:0 4px 8px rgba(0,0,0,0.1);cursor:pointer;transition:0.3s}
+    .card:hover{transform:translateY(-5px)}
+    .card img{width:100%;height:150px;object-fit:cover}
+    .card .overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.4);color:#fff;display:flex;align-items:center;justify-content:center;font-size:20px;font-weight:600;opacity:0;transition:0.3s}
+    .card:hover .overlay{opacity:1}
+    .card-details{display:none;padding:15px}
+    .card.open .card-details{display:block}
+
+    /* ---------- Responsive ---------- */
+    @media(max-width:768px){
+      .about-news{grid-template-columns:1fr}
+    }
   </style>
 </head>
 <body>
- <!-- SIDEBAR -->
- <aside id="sidebar" class="sidebar" aria-hidden="true">
-   <button id="closeSidebar" style="position:absolute;top:16px;right:18px;font-size:28px;background:transparent;border:none;cursor:pointer;color:#fff;z-index:10003;">×</button>
-   <h3 style="margin-top:6px;color:#fff;" id="dashboard-title">Dashboard</h3>
-   <nav style="margin:16px 0 20px 0;display:flex;flex-direction:column;gap:10px;">
-    <a href="#" style="color:#fff;text-decoration:none;font-weight:600;" id="nav-about">About Us</a>
-    <a href="#dashboard" style="color:#fff;text-decoration:none;font-weight:600;" id="nav-msp">MSP</a>
-    <a href="#dashboard" style="color:#fff;text-decoration:none;font-weight:600;" id="nav-yield">Yield Comparison</a>
-    <a href="#" style="color:#fff;text-decoration:none;font-weight:600;" id="nav-contact">Contact Us</a>
-   </nav>
- </aside>
- <!-- NAVBAR -->
- <header class="navbar">
-  <div class="nav-left">
-    <button id="menuBtn" class="menu-btn" title="Menu">☰</button>
-    <div class="brand">
-      <div class="logo">S</div>
-      <span class="title" id="nav-title">Solutioneers</span>
-      <div style="font-size:12px;color:#547a5a;" id="subtitle">Smart Agriculture Group</div>
-    </div>
-    <div class="nav-time" id="navTime"></div>
+  <!-- Sidebar -->
+  <div class="sidebar" id="sidebar">
+    <button class="sidebar-toggle" id="sidebarToggle">☰</button>
+    <h3>Menu</h3>
+    <a href="#">Dashboard</a>
+    <a href="#">Weather</a>
+    <a href="#">Schemes</a>
+    <a href="#">Seeds</a>
+    <a href="#">Calendar</a>
   </div>
-  <div class="nav-right">
-    <select class="lang-select" id="langSel" title="Language">
-      <option>English</option>
-      <option>हिन्दी</option>
-      <option>ਪੰਜਾਬੀ</option>
-    </select>
-    <button class="btn login" id="btnLogin">Login</button>
-    <button class="btn cta" id="btnSignup">Sign Up</button>
-  </div>
- </header>
- <main>
-  <section class="hero" role="banner" aria-label="Announcements">
-   <div class="left">
-     <h1 id="hero">Grow smarter. Harvest better.</h1>
-     <p id="herodesc">Real-time advisories, market prices, subsidies, and soil insights built for farmers, powered by data.</p>
-     <div class="cta-row">
-       <button class="cta primary" id="btn-dashboard">Explore Dashboard</button>
-       <button class="cta ghost" id="btn-how">How it works</button>
-     </div>
-   </div>
-   <div class="right" aria-hidden="true">
-    Farmers Community
-   </div>
-  </section>
-  <section class="section">
-   <div class="card-large about">
-     <h3 id="about-head">About Solutioneers</h3>
-     <p id="about1">We bring practical digital tools to farmers: weather forecasting, MSP updates, soil health recommendations and local advisories that help you decide what to plant and when.</p>
-     <p style="margin-top:12px;color:#4b7b4f;font-weight:700;" id="abouttag">Your land. Your data. Better yields.</p>
-   </div>
-   <aside class="news-box">
-     <h3 id="news-head">Latest News</h3>
-     <div class="news-scroll">
-      <div class="news-track" id="newsTrack">
-        <div class="news-item" id="newsitem1">Stubble management machines distributed in Punjab.</div>
-        <div class="news-item" id="newsitem2">New high-yield seed variety released.</div>
-        <div class="news-item" id="newsitem3">Localized irrigation training programs starting next week.</div>
-        <div class="news-item" id="newsitem4">MSP updates pushed for rabi crops – check MSP page.</div>
-        <div class="news-item" id="newsitem5">IMD predicts patchy showers across NW regions.</div>
-        <!-- Repeat for continuous scroll -->
-        <div class="news-item" id="newsitem6">Stubble management machines distributed in Punjab.</div>
-        <div class="news-item" id="newsitem7">New high-yield seed variety released.</div>
-        <div class="news-item" id="newsitem8">Localized irrigation training programs starting next week.</div>
-        <div class="news-item" id="newsitem9">MSP updates pushed for rabi crops – check MSP page.</div>
-        <div class="news-item" id="newsitem10">IMD predicts patchy showers across NW regions.</div>
-      </div>
-     </div>
-   </aside>
-  </section>
-  <section class="dashboard-bg" id="dashboard">
-   <section class="grid" aria-label="Features">
 
-    <!-- NEW LATEST MACHINERY CARD -->
-    <div>
-      <a class="big-card overlay-yellow" href="javascript:void(0)"
-         style="background-color:#ffe084;background-image:url('https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&w=600')" id="main-card-machinery">
-        <span class="title" id="card-machinery">Latest Machinery</span>
-        <span class="desc" id="card-machinery-desc">See agri-tech and new equipment upgrades with government offers.</span>
-      </a>
-      <div class="card-detail" id="detail-machinery">
-        <h4>Latest Agriculture Machinery (2025)</h4>
-        <ul>
-          <li><b>Smart Tractors:</b> GPS, IoT, auto-seeding/fertigation. 35% subsidy (+15% for women farmers).</li>
-          <li><b>Drone Sprayers:</b> Govt pilots, up to 50% discount.</li>
-          <li><b>Harvesters:</b> Modern hire centers for efficient combines at subsidized rates.</li>
-          <li><b>Solar Pumps:</b> 40% direct benefit transfer through SolarSewa portal.</li>
-          <li><b>Precision Planters:</b> Available via SMAM at Krishi Vigyan Kendras or demo days.</li>
-        </ul>
-        <p><b>Tip:</b> Check local KVK for machinery demo days or your co-op for rental offers.</p>
+  <!-- Navbar -->
+  <header>
+    <div class="brand">🌱 Solutioneers</div>
+    <div class="time" id="time">--:--:--</div>
+    <div class="buttons">
+      <button>Login</button>
+      <button>Sign Up</button>
+    </div>
+  </header>
+
+  <!-- Hero -->
+  <section class="hero">
+    <h1>Smart Agriculture Dashboard</h1>
+    <p>Track weather, seeds, machinery, government schemes, and crop calendar in one place.</p>
+    <button>Explore</button>
+    <button>Learn More</button>
+  </section>
+
+  <!-- About + News -->
+  <section class="about-news">
+    <div class="about">
+      <h2>About Us</h2>
+      <p>We bring agriculture into the digital era by providing real-time information and tools for farmers.</p>
+    </div>
+    <div class="news-ticker">
+      <h3>Latest News</h3>
+      <p>🌾 New subsidy schemes announced.</p>
+      <p>☀️ Weather update: Monsoon expected soon.</p>
+      <p>🌱 New hybrid seeds available.</p>
+    </div>
+  </section>
+
+  <!-- Dashboard -->
+  <section class="dashboard">
+    <div class="card">
+      <img src="https://source.unsplash.com/400x300/?seeds" alt="Seeds">
+      <div class="overlay">Seeds</div>
+      <div class="card-details">
+        <p>Explore high-quality seeds and planting guides.</p>
       </div>
     </div>
-
-    <!-- ALL YOUR OTHER CARDS BELOW, UNCHANGED -->
-    <!-- ... copy your existing cards here, as already in your previous HTML ... -->
-
-   </section>
+    <div class="card">
+      <img src="https://source.unsplash.com/400x300/?government" alt="Schemes">
+      <div class="overlay">Schemes</div>
+      <div class="card-details">
+        <p>Latest government schemes for farmers.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://source.unsplash.com/400x300/?weather" alt="Weather">
+      <div class="overlay">Weather</div>
+      <div class="card-details">
+        <p>Stay updated with real-time weather conditions.</p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="https://source.unsplash.com/400x300/?calendar" alt="Calendar">
+      <div class="overlay">Crop Calendar</div>
+      <div class="card-details">
+        <p>Plan and manage your crops with our calendar tool.</p>
+      </div>
+    </div>
+    <!-- New Card: Latest Machinery -->
+    <div class="card">
+      <img src="https://source.unsplash.com/400x300/?tractor,machine" alt="Machinery">
+      <div class="overlay">Latest Machinery</div>
+      <div class="card-details">
+        <p>Discover modern farming equipment and machinery that boosts efficiency.</p>
+      </div>
+    </div>
   </section>
-  <!-- ...rest of your HTML/script unchanged... -->
-</main>
-<!-- Chatbot and JS same as before -->
-<!-- ...etc... -->
+
+  <!-- JS Interactions -->
+  <script>
+    // Sidebar toggle
+    const sidebar = document.getElementById('sidebar');
+    const sidebarToggle = document.getElementById('sidebarToggle');
+    sidebarToggle.addEventListener('click', () => {
+      sidebar.classList.toggle('open');
+    });
+
+    // Card expand/collapse
+    document.querySelectorAll('.card').forEach(card => {
+      card.addEventListener('click', () => {
+        card.classList.toggle('open');
+      });
+    });
+
+    // Live time
+    function updateTime() {
+      const now = new Date();
+      document.getElementById('time').textContent = now.toLocaleTimeString();
+    }
+    setInterval(updateTime, 1000);
+    updateTime();
+  </script>
+</body>
 </html>
